# umon1stl

./: .gitignore  LICENSE  README.md
portable/app/main/: application.cpp  application.h  version.cpp  version.h
portable/app/storage/: wave.h  (+5 more)
portable/tests/: localtest.cpp  localtest.h  testall.cpp  testall.h  testscaler.cpp  testscaler.h
portable/uiframework/: defineui.cpp  defineui.h  uicontext.cpp  uicontext.h  uicontrols.cpp  uicontrols.h  uipaint.cpp  uipaint.h  uirgb.cpp  uirgb.h  uixy.cpp  uixy.h  weakmap.cpp  weakmap.h
portable/useful/: common.cpp  common.h  defines.h  fromto.cpp  fromto.h  io.cpp  io.h  log.cpp  log.h  logs.cpp  logs.h  object.cpp  object.h  property.cpp  property.h  useful.cpp  useful.h
resources/: about-dir.txt
resources/testlogs/: Local-TestDiv0-all-new.testlog  Local-TestFindMax-all-new.testlog  Local-TestFromTo-all.testlog  Local-TestRgbHex-all-new.testlog  Local-TestStringReplaceAll-all.testlog  Local-TestUiMap-all.testlog  Local-TestWaveAcquire-all.testlog  Local-TestWaveAppend-all-new.testlog  TestAll-all-new.testlog  TestAll-all.testlog  TestAll-drawDetails-new.testlog  TestScaler-all.testlog
with_emscripten/: CMakeLists.txt  Umon-template.html  cmake_build_emscripten.bat  notes.txt
with_emscripten/emsource/: canvastest.html  emcommon.h  emdebug.cpp  emdebug.h  emglobals.cpp  emglobals.h  emjs.cpp  emjs.h  emmain.cpp  empaint.cpp  empaint.h  emui.cpp  emui.h
with_qt/: Umon.pro
with_qt/qtsource/: qtmain.cpp  qtpaint.cpp  qttesthelpers.cpp  qttesthelpers.h  qtui.cpp  qtui.h.nk6140
with_uv/: readme.txt
with_uv/vcsource/: Resource.h  Vmon.cpp  Vmon.h  Vmon.rc  Vmon.sln  Vmon.vcxproj  Vmon.vcxproj.filters  check_all_rules.ruleset  stdafx.cpp  stdafx.h  targetver.h
(+36 files in other folders)
